更新AppID显示，更改Setup页描述

--- a/src/l10n/langs/de.json
+++ b/src/l10n/langs/de.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Mache mehr aus deinen Notizen und Skizzen.",
   "welcome.link": "Los geht‘s",
@@ -95,6 +95,7 @@
   "btn.create.note": "Nutze dein Gerät",
   "btn.startOver": "Erneut beginnen",
   "btn.cloudLogin.login": "Anmelden/Registrieren",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Gerät später koppeln",
   "btn.pressAndHold.searching": "Suche läuft...",
   "btn.search.title": "Suchen",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Wenn du die Wacom Inkspace App während eines Downloads schließt, gehen deine Notizen verloren.",
   "export.limit.reached.title": "Limit erreicht",
   "export.limit.reached.description": "Die maximale Anzahl von 40 Notizen wurde überschritten. Verringere die Anzahl der ausgewählten Notizen und versuche es erneut.",
-  "plus.title": "Entwickle deine Ideen weiter",
-  "plus.storage.title": "50 GB Speicher",
-  "plus.storage.description": "schütze deine Inhalte",
-  "plus.sync.title": "Sync auf mehreren Geräten",
-  "plus.sync.description": "mithilfe der Inkspace App",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "wandle deine Notizen in Text um",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "teile deinen kreativen Prozess",
-  "plus.export.title": "Weitere Exportformate",
-  "plus.export.description": "einschließlich PSD, DOC und SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "erstelle Tags sogar auf Papier",
-  "plus.web.title": "Zugriff von überall",
-  "plus.web.description": "mit dem Inkspace Webportal",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "bringe Ordnung in deine Inhalte",
-  "plus.collaboration.title": "Zusammenarbeit in Echtzeit",
-  "plus.collaboration.description": "arbeite mit anderen im Team",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Klemme und Papier anhängen",
   "tutorial.viper.step.one.desc": "Hänge die Klemme an deinen Intuos Pro an und platziere das Papier wie dargestellt.",
   "tutorial.viper.step.two.title": "Tintenstift auf Papier bringen",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Dein Gerät koppeln",
   "settings.device.pair.device.bluetooth": "Dein Gerät koppeln (Bluetooth)",
   "settings.device.not.connected": "Es ist kein Wacom Gerät gekoppelt",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Alle Rechte vorbehalten.",
   "settings.tab.device": "Wacom Gerät",
