--- a/src/l10n/langs/es.json
+++ b/src/l10n/langs/es.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Sácale más partido a tus notas y dibujos.",
   "welcome.link": "Empecemos",
@@ -95,6 +95,7 @@
   "btn.create.note": "Usa tu dispositivo",
   "btn.startOver": "Empezar de nuevo",
   "btn.cloudLogin.login": "Iniciar sesión/registrarse",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Conectar dispositivo más adelante",
   "btn.pressAndHold.searching": "Buscando...",
   "btn.search.title": "Buscar",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "If you close Wacom Inkspace App while download proceed, your notes will be lost.",
   "export.limit.reached.title": "Límite alcanzado",
   "export.limit.reached.description": "Se ha superado la cantidad máxima de 40 notas. Reduce la cantidad de notas seleccionadas y vuelve a intentarlo.",
-  "plus.title": "Lleva más lejos tus ideas",
-  "plus.storage.title": "50 GB de almacenamiento",
-  "plus.storage.description": "guarda tu contenido en un lugar seguro",
-  "plus.sync.title": "Sincronización con varios dispositivos",
-  "plus.sync.description": "con la aplicación Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "convierte tus notas en texto",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "comparte tu proceso creativo",
-  "plus.export.title": "Más formatos de exportación",
-  "plus.export.description": "incluidos PSD, DOC y SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "crea etiquetas incluso en papel",
-  "plus.web.title": "Accede desde donde quieras",
-  "plus.web.description": "con el portal web de Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "organiza mejor tu contenido",
-  "plus.collaboration.title": "Colaboración en tiempo real",
-  "plus.collaboration.description": "trabaja en equipo",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Fijar el clip y el papel",
   "tutorial.viper.step.one.desc": "Fija el clip a la tableta Intuos Pro y coloca el papel tal como se muestra.",
   "tutorial.viper.step.two.title": "Lleva el bolígrafo al papel",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Empareja tu dispositivo",
   "settings.device.pair.device.bluetooth": "Empareja tu dispositivo (Bluetooth)",
   "settings.device.not.connected": "No hay ningún dispositivo Wacom conectado",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Todos los derechos reservados.",
   "settings.tab.device": "Dispositivo Wacom",
