--- a/src/l10n/langs/fr.json
+++ b/src/l10n/langs/fr.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Exploitez vos notes et vos croquis",
   "welcome.link": "Commençons",
@@ -95,6 +95,7 @@
   "btn.create.note": "Utiliser votre appareil",
   "btn.startOver": "Reprendre au début",
   "btn.cloudLogin.login": "Se connecter/S'inscrire",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Connecter l'appareil plus tard",
   "btn.pressAndHold.searching": "Recherche en cours…",
   "btn.search.title": "Rechercher",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Si vous fermez l'application Wacom Inkspace alors qu'un téléchargement est en cours, vos notes seront perdues.",
   "export.limit.reached.title": "Limite atteinte",
   "export.limit.reached.description": "Le nombre maximal de 40 notes a été dépassé. Veuillez réduire le nombre de notes sélectionnées et recommencer.",
-  "plus.title": "Développez vos idées",
-  "plus.storage.title": "50 Go de stockage",
-  "plus.storage.description": "gardez votre contenu en sécurité",
-  "plus.sync.title": "Synchronisation sur plusieurs appareils",
-  "plus.sync.description": "à l'aide de l'application Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "convertissez vos notes en texte",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "partagez votre processus créatif",
-  "plus.export.title": "Plus de formats d'export",
-  "plus.export.description": "y compris PSD, DOC et SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "créez des balises même sur papier",
-  "plus.web.title": "Accès où que vous soyez",
-  "plus.web.description": "à l'aide du portail Web Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "organisez au mieux votre contenu",
-  "plus.collaboration.title": "Collaboration en temps réel",
-  "plus.collaboration.description": "travaillez en équipe",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Attacher la pince et le papier",
   "tutorial.viper.step.one.desc": "Attachez la pince à votre Intuos Pro et placez le papier tel qu'indiqué.",
   "tutorial.viper.step.two.title": "Placez le stylo à encre sur le papier",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Relier votre appareil",
   "settings.device.pair.device.bluetooth": "Relier votre appareil (Bluetooth)",
   "settings.device.not.connected": "Aucun appareil Wacom n'est connecté",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Tous droits réservés.",
   "settings.tab.device": "Appareil Wacom",
