--- a/src/l10n/langs/ko.json
+++ b/src/l10n/langs/ko.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "메모 및 스케치에서 더 많은 작업을 수행하십시오.",
   "welcome.link": "시작합시다",
@@ -95,6 +95,7 @@
   "btn.create.note": "내 장치 사용",
   "btn.startOver": "재시작",
   "btn.cloudLogin.login": "로그인/등록",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "장치를 나중에 연결",
   "btn.pressAndHold.searching": "검색 중...",
   "btn.search.title": "검색",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "다운로드 진행 중에 Wacom Inkspace 앱을 닫으면 메모가 손실됩니다.",
   "export.limit.reached.title": "한도에 도달함",
   "export.limit.reached.description": "최대한도인 40개의 메모를 초과했습니다. 선택한 메모의 수를 줄이고 다시 시도해 주십시오.",
-  "plus.title": "아이디어를 발전시키세요",
-  "plus.storage.title": "50GB의 저장소",
-  "plus.storage.description": "콘텐츠를 안전하게 보관할 수 있습니다",
-  "plus.sync.title": "여러 장치에서 동기화",
-  "plus.sync.description": "Inkspace 앱으로 여러 장치에서 동기화할 수 있습니다",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "메모를 텍스트로 변환할 수 있습니다",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "창의적인 프로세스를 공유하세요",
-  "plus.export.title": "더 많은 내보내기 형식",
-  "plus.export.description": "PSD, DOC 및 SVG 형식으로 내보낼 수 있습니다",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "종이에도 태그를 생성할 수 있습니다",
-  "plus.web.title": "어느 곳에서든 액세스 가능",
-  "plus.web.description": "Inkspace 웹 포털에서 액세스할 수 있습니다",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "콘텐츠를 더욱 잘 정리할 수 있습니다",
-  "plus.collaboration.title": "실시간 협업",
-  "plus.collaboration.description": "팀으로 협동할 수 있습니다",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "클립 및 종이 첨부",
   "tutorial.viper.step.one.desc": "Intuos Pro에 클립을 첨부하고 표시된 것처럼 종이를 배치합니다.",
   "tutorial.viper.step.two.title": "종이로 잉크 펜 불러오기",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "선택 페어링",
   "settings.device.pair.device.bluetooth": "선택 페어링 (Bluetooth)",
   "settings.device.not.connected": "연결된 Wacom 장치 없음",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. All rights reserved.",
   "settings.tab.device": "Wacom 장치",
