--- a/src/l10n/langs/ru.json
+++ b/src/l10n/langs/ru.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Расширьте возможности работы с заметками и эскизами.",
   "welcome.link": "Начать",
@@ -95,6 +95,7 @@
   "btn.create.note": "Используйте свое устройство",
   "btn.startOver": "НАЧАТЬ ЗАНОВО",
   "btn.cloudLogin.login": "Войти в систему или зарегистрироваться",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Соединить устройство позже",
   "btn.pressAndHold.searching": "Поиск...",
   "btn.search.title": "Поиск",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Если Вы закроете приложение Wacom Inkspace во время скачивания, Ваши заметки будут утрачены.",
   "export.limit.reached.title": "Достигнуто ограничение",
   "export.limit.reached.description": "Превышено максимально допустимое количество заметок (40). Выберите меньшее количество заметок и повторите попытку.",
-  "plus.title": "Совершенствуйте свои идеи",
-  "plus.storage.title": "Хранилище 50 ГБ",
-  "plus.storage.description": "обеспечьте безопасность своих файлов",
-  "plus.sync.title": "Синхронизация нескольких устройств",
-  "plus.sync.description": "с помощью приложения Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "преобразовывайте свои заметки в текст",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "покажите, как проходит Ваш творческий процесс",
-  "plus.export.title": "Дополнительные форматы экспорта",
-  "plus.export.description": "в том числе PSD, DOC и SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "создавайте теги даже на бумаге",
-  "plus.web.title": "Повсеместный доступ",
-  "plus.web.description": "с помощью веб-портала Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "упорядочивайте свои файлы эффективнее",
-  "plus.collaboration.title": "Совместная работа в режиме реального времени",
-  "plus.collaboration.description": "работайте в команде",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Прикрепление зажима и бумаги",
   "tutorial.viper.step.one.desc": "Прикрепите зажим к планшету Intuos Pro и расположите лист бумаги, как показано на рисунке.",
   "tutorial.viper.step.two.title": "Поднесите чернильное перо к листу бумаги",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Связать устройство",
   "settings.device.pair.device.bluetooth": "Связать устройство (Bluetooth)",
   "settings.device.not.connected": "Нет соединенных устройств Wacom",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "© Wacom Company, Limited, 2017 - {currentYear}. Все права защищены.",
   "settings.tab.device": "Устройство Wacom",
