--- a/src/l10n/langs/zh-CN.json
+++ b/src/l10n/langs/zh-CN.json
@@ -5,9 +5,7 @@
   "terms.header": "使用条款",
   "terms.accept": "同意",
   "terms.decline": "拒绝",
-
   "edit.loading.content": "Loading content",
-
   "entity.group.name": "组名",
   "setupDevice.title": "设置设备",
   "setupDevice.description": "将为您设置以使用纸张进行素描或笔记",
@@ -95,6 +93,7 @@
   "btn.create.note": "使用您的设备",
   "btn.startOver": "重新开始",
   "btn.cloudLogin.login": "登录 / 注册",
+  "btn.ok.got.it": "好的",
   "btn.setupLater.connectlater": "稍后连接设备",
   "btn.pressAndHold.searching": "搜索中...",
   "btn.search.title": "搜索",
@@ -121,25 +120,15 @@
   "downloadProceed.description": "如果进行下载时关闭Wacom Inkspace应用程序，您的笔记将会丢失。",
   "export.limit.reached.title": "已达到上限",
   "export.limit.reached.description": "已超过最大记事本数 40。请减少所选记事本数并重试。",
-  "plus.title": "使您的想法往前推进",
-  "plus.storage.title": "50GB存储空间",
-  "plus.storage.description": "确保内容的安全",
-  "plus.sync.title": "在多个设备上同步",
-  "plus.sync.description": "使用Inkspace应用程序",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "将笔记转成文本",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "共享创作过程",
-  "plus.export.title": "更多导出格式",
-  "plus.export.description": "包括PSD、DOC和SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "在纸上创建标记",
-  "plus.web.title": "随处访问",
-  "plus.web.description": "使用Inkspace门户网站",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "将内容整理得更好",
-  "plus.collaboration.title": "实时协作",
-  "plus.collaboration.description": "团队合作",
+  "plus.title": "改进项",
+  "plus.export.all.title": "一键导出所有笔记",
+  "plus.export.all.description": "支持 SVG, PSD, PNG, JPEG 格式",
+  "plus.usb.bt.title": "USB & BT 切换",
+  "plus.usb.bt.description": "灵活切换连接方式",
+  "plus.darktheme.title": "完美深色主题",
+  "plus.darktheme.description": "全新深色界面体验",
+  "plus.appid.title": "AppID 显示",
+  "plus.appid.description": "在设置中查看设备 AppID",
   "tutorial.viper.step.one.title": "附加纸夹和纸张",
   "tutorial.viper.step.one.desc": "附加纸夹和纸张  附加纸夹到Intuos Pro并如所示放置纸张。",
   "tutorial.viper.step.two.title": "将墨水笔带到纸张上",
@@ -184,6 +173,7 @@
   "settings.device.pair.device": "配对您的设备",
   "settings.device.pair.device.bluetooth": "配对您的设备 (Bluetooth)",
   "settings.device.not.connected": "没有连接任何Wacom设备",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited.保留所有权利。",
   "settings.tab.device": "Wacom设备",
@@ -278,10 +268,8 @@
   "layerpane.thumb.layer.title": "图层 {index}",
   "preview.file.intuos.pro": "Intuos Pro文件",
   "preview.sketchpad.pro": "Sketchpad Pro文件",
-
   "preview.edit.in.progress": "Save in progress. Please wait.",
   "preview.rotate.in.progress": "Rotate in progress. Please wait.",
-
   "preview.no.preview.available": "无可用的预览",
   "preview.items.selected": "{count}个项目已选择",
   "preview.items.combining": "正在组合项目",
