--- a/src/l10n/langs/en.json
+++ b/src/l10n/langs/en.json
@@ -5,9 +5,7 @@
   "terms.header": "Terms of use",
   "terms.accept": "Agree",
   "terms.decline": "Decline",
-
   "edit.loading.content": "Loading content",
-
   "entity.group.name": "Group Name",
   "setupDevice.title": "Setup Device",
   "setupDevice.description": "Let's get you setup to use paper for sketching or notes",
@@ -95,6 +93,7 @@
   "btn.create.note": "Use your device",
   "btn.startOver": "Start Over",
   "btn.cloudLogin.login": "Login / signup",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Connect device later",
   "btn.pressAndHold.searching": "Searching ...",
   "btn.search.title": "Search",
@@ -121,25 +120,15 @@
   "downloadProceed.description": "If you close Wacom Inkspace App while download proceed, your notes will be lost.",
   "export.limit.reached.title": "Limit reached",
   "export.limit.reached.description": "The maximum amount of 40 notes have been exceeded. Please, reduce the amount of the selected notes and try again.",
-  "plus.title": "Move your ideas further",
-  "plus.storage.title": "50GB Storage",
-  "plus.storage.description": "keep your content safe",
-  "plus.sync.title": "Sync on Multiple Devices",
-  "plus.sync.description": "using Inkspace app",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "convert your notes into text",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "share your creative process",
-  "plus.export.title": "More Export Formats",
-  "plus.export.description": "including PSD, DOC and SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "create tags even on paper",
-  "plus.web.title": "Access from anywhere",
-  "plus.web.description": "using Inkspace Web Portal",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "organise your content better",
-  "plus.collaboration.title": "Realtime Collaboration",
-  "plus.collaboration.description": "work as a team",
+  "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Attach clip and paper",
   "tutorial.viper.step.one.desc": "Attach the clip to your Intuos Pro and place paper as shown.",
   "tutorial.viper.step.two.title": "Bring Ink pen on paper",
@@ -184,6 +173,7 @@
   "settings.device.pair.device": "Pair your device",
   "settings.device.pair.device.bluetooth": "Pair your device (Bluetooth)",
   "settings.device.not.connected": "There is no Wacom device connected",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. All rights reserved.",
   "settings.tab.device": "Wacom device",
@@ -278,10 +268,8 @@
   "layerpane.thumb.layer.title": "Layer {index}",
   "preview.file.intuos.pro": "Intuos Pro file",
   "preview.sketchpad.pro": "Sketchpad Pro file",
-
   "preview.edit.in.progress": "Save in progress. Please wait.",
   "preview.rotate.in.progress": "Rotate in progress. Please wait.",
-
   "preview.no.preview.available": "No preview available",
   "preview.items.selected": "{count} items selected",
   "preview.items.combining": "Combining Items",
