--- a/src/l10n/langs/it.json
+++ b/src/l10n/langs/it.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Ottieni il massimo da note e schizzi.",
   "welcome.link": "Iniziamo",
@@ -95,6 +95,7 @@
   "btn.create.note": "Usa il tuo dispositivo",
   "btn.startOver": "AVVIA DA CAPO",
   "btn.cloudLogin.login": "Accedi/Iscriviti",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Connetti il dispositivo in un secondo momento",
   "btn.pressAndHold.searching": "Ricerca in corso...",
   "btn.search.title": "Cerca",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Se chiudi l’app Wacom Inkspace durante il download, le note andranno perse.",
   "export.limit.reached.title": "Limite raggiunto",
   "export.limit.reached.description": "È stata superata la quantità massima di 40 note. Riduci il numero di note selezionate e riprova.",
-  "plus.title": "Sviluppa ulteriormente le tue idee",
-  "plus.storage.title": "50 GB di capacità di archiviazione",
-  "plus.storage.description": "proteggi i tuoi contenuti",
-  "plus.sync.title": "Sincronizza su diversi dispositivi",
-  "plus.sync.description": "utilizzo dell’app Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "converti le tue note in testo",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "condividi il tuo processo creativo",
-  "plus.export.title": "Altri formati di esportazione",
-  "plus.export.description": "compresi PSD, DOC e SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "crea tag anche su carta",
-  "plus.web.title": "Accedi da qualsiasi luogo",
-  "plus.web.description": "utilizzando il portale web Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "organizza meglio i tuoi contenuti",
-  "plus.collaboration.title": "Collaborazione in tempo reale",
-  "plus.collaboration.description": "lavora come un team",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Fissa graffetta e foglio di carta",
   "tutorial.viper.step.one.desc": "Fissa la graffetta a Intuos Pro e posiziona il foglio di carta come mostrato.",
   "tutorial.viper.step.two.title": "Utilizza la penna a sfera su carta",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Abbina il dispositivo",
   "settings.device.pair.device.bluetooth": "Abbina il dispositivo (Bluetooth)",
   "settings.device.not.connected": "Nessun dispositivo Wacom connesso",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Tutti i diritti riservati.",
   "settings.tab.device": "Dispositivo Wacom",
