--- a/src/l10n/langs/ja.json
+++ b/src/l10n/langs/ja.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "メモやスケッチをさらに活用してください。",
   "welcome.link": "始めましょう",
@@ -95,6 +95,7 @@
   "btn.create.note": "デバイスを使用",
   "btn.startOver": "やり直し",
   "btn.cloudLogin.login": "ログイン / 登録",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "後でデバイスを接続する",
   "btn.pressAndHold.searching": "検出中...",
   "btn.search.title": "検索",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "ダウンロード中に Wacom Inkspace アプリを閉じるとメモは失われます。",
   "export.limit.reached.title": "制限に達しました",
   "export.limit.reached.description": "ノートの最大数 40 を越えています。選択済みのノートの数を減らしてやり直してください。",
-  "plus.title": "アイデアをもっと動かそう",
-  "plus.storage.title": "50 GB ストレージ",
-  "plus.storage.description": "コンテンツを安全に保護",
-  "plus.sync.title": "複数のデバイスで同期",
-  "plus.sync.description": "Inkspace アプリを使う",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "メモをテキストに変換",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "クリエイティブなプロセスを共有",
-  "plus.export.title": "その他のエクスポート フォーマット",
-  "plus.export.description": "PSD、DOC、SVG など",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "紙上でもタグを作成",
-  "plus.web.title": "どこからでもアクセスできる",
-  "plus.web.description": "Inkspace Web ポータルを使用する",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "コンテンツをもっと整理する",
-  "plus.collaboration.title": "リアルタイムのコラボレーション",
-  "plus.collaboration.description": "チームで作業",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "クリップと紙を取り付ける",
   "tutorial.viper.step.one.desc": "クリップを Intuos Pro に取り付け、紙を配置して表示します。",
   "tutorial.viper.step.two.title": "紙でインクペンを使用する",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "デバイスをペアリング",
   "settings.device.pair.device.bluetooth": "デバイスをペアリング (Bluetooth)",
   "settings.device.not.connected": "接続された Wacom デバイスはありません",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited.All rights reserved.",
   "settings.tab.device": "Wacom デバイス",
