--- a/src/l10n/langs/pl.json
+++ b/src/l10n/langs/pl.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Większe możliwości pracy z notatkami i szkicami.",
   "welcome.link": "Zaczynajmy",
@@ -95,6 +95,7 @@
   "btn.create.note": "Używaj urządzenia",
   "btn.startOver": "ZACZNIJ OD NOWA",
   "btn.cloudLogin.login": "Zaloguj się/zarejestruj się",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Podłącz urządzenie później",
   "btn.pressAndHold.searching": "Wyszukiwanie...",
   "btn.search.title": "Wyszukaj",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Jeśli zamkniesz aplikację Wacom Inkspace w trakcie pobierania, utracisz swoje notatki.",
   "export.limit.reached.title": "Osiągnięto limit",
   "export.limit.reached.description": "Przekroczono maksymalną liczbę 40 notatek. Ogranicz liczbę wybranych notatek i spróbuj ponownie.",
-  "plus.title": "Rozwijaj pomysły dalej",
-  "plus.storage.title": "50 GB przestrzeni",
-  "plus.storage.description": "do bezpiecznego przechowywania zawartości",
-  "plus.sync.title": "Synchronizacja na wielu urządzeniach",
-  "plus.sync.description": "przy użyciu aplikacji Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "zamień notatki na tekst",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "podziel się procesem twórczym",
-  "plus.export.title": "Więcej formatów eksportu",
-  "plus.export.description": "w tym PSD, DOC i SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "twórz znaczniki nawet na papierze",
-  "plus.web.title": "Dostęp z każdego miejsca",
-  "plus.web.description": "przez portal internetowy Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "lepsza organizacja zawartości",
-  "plus.collaboration.title": "Współpraca w czasie rzeczywistym",
-  "plus.collaboration.description": "pracuj w zespole",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Zamocuj papier za pomocą klipsa",
   "tutorial.viper.step.one.desc": "Umieść klips na urządzeniu Intuos Pro i wsuń papier, tak jak pokazano na ilustracji.",
   "tutorial.viper.step.two.title": "Umieść pióro na papierze",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Sparuj urządzenie",
   "settings.device.pair.device.bluetooth": "Sparuj urządzenie (Bluetooth)",
   "settings.device.not.connected": "Nie podłączono urządzenia Wacom",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Wszelkie prawa zastrzeżone.",
   "settings.tab.device": "Urządzenie Wacom",
