--- a/src/l10n/langs/pt.json
+++ b/src/l10n/langs/pt.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "Faça mais com suas notas e desenhos.",
   "welcome.link": "Vamos começar",
@@ -95,6 +95,7 @@
   "btn.create.note": "Usar o seu dispositivo",
   "btn.startOver": "Recomeçar",
   "btn.cloudLogin.login": "Logon/Inscrição",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "Ligar o dispositivo mais tarde",
   "btn.pressAndHold.searching": "Procurando...",
   "btn.search.title": "Pesquisar",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "Se você fechar o aplicativo Wacom Inkspace durante o download, as suas notas serão perdidas.",
   "export.limit.reached.title": "Limite atingido",
   "export.limit.reached.description": "A quantidade máxima de 40 notas foi excedida. Reduza a quantidade de notas selecionadas e tente novamente.",
-  "plus.title": "Desenvolva suas ideias",
-  "plus.storage.title": "50 GB de armazenamento",
-  "plus.storage.description": "mantenha o seu conteúdo seguro",
-  "plus.sync.title": "Sincroniza em vários dispositivos",
-  "plus.sync.description": "usando o aplicativo Inkspace",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "converta suas notas em texto",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "compartilhe o seu processo criativo",
-  "plus.export.title": "Mais formatos de exportação",
-  "plus.export.description": "incluindo PSD, DOC e SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "crie etiquetas até em papel",
-  "plus.web.title": "Acesse a partir de qualquer lugar",
-  "plus.web.description": "usando o portal web Inkspace",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "organize melhor o seu conteúdo",
-  "plus.collaboration.title": "Colaboração em tempo real",
-  "plus.collaboration.description": "trabalhe em equipe",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "Colocar clipe e papel",
   "tutorial.viper.step.one.desc": "Coloque o clipe no Intuos Pro e posicione o papel conforme indicado.",
   "tutorial.viper.step.two.title": "Passar caneta Ink sobre o papel",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "Emparelhar o dispositivo",
   "settings.device.pair.device.bluetooth": "Emparelhar o dispositivo (Bluetooth)",
   "settings.device.not.connected": "Nenhum dispositivo Wacom ligado",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright © 2017 - {currentYear} Wacom Company, Limited. Todos os direitos reservados.",
   "settings.tab.device": "Dispositivo Wacom",
