--- a/src/l10n/langs/zh-TW.json
+++ b/src/l10n/langs/zh-TW.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "welcome.header": "Wacom Inkspace",
   "welcome.p": "使用您的筆記和素描進行更多工作。",
   "welcome.link": "開始使用",
@@ -95,6 +95,7 @@
   "btn.create.note": "使用您的裝置",
   "btn.startOver": "重新開始",
   "btn.cloudLogin.login": "登入 / 註冊",
+  "btn.ok.got.it": "OK",
   "btn.setupLater.connectlater": "稍後連接裝置",
   "btn.pressAndHold.searching": "搜尋中...",
   "btn.search.title": "搜尋",
@@ -121,25 +122,15 @@
   "downloadProceed.description": "如果進行下載時關閉 Wacom Inkspace 應用程式，您的筆記將會遺失。",
   "export.limit.reached.title": "已達限制",
   "export.limit.reached.description": "已達 40 個筆記的數量上限。請減少所選筆記的數量並重試。",
-  "plus.title": "推動您的想法",
-  "plus.storage.title": "50GB 儲存空間",
-  "plus.storage.description": "保持內容的安全",
-  "plus.sync.title": "在多個裝置上同步",
-  "plus.sync.description": "使用 Inkspace 應用程式",
-  "plus.text.title": "Ink to Text",
-  "plus.text.description": "將筆記轉換為文字",
-  "plus.video.title": "Ink to Video",
-  "plus.video.description": "分享您的創作流程",
-  "plus.export.title": "更多匯出格式",
-  "plus.export.description": "包括 PSD、DOC 和 SVG",
-  "plus.tag.title": "Ink to Tag",
-  "plus.tag.description": "在紙上建立標籤",
-  "plus.web.title": "隨處存取",
-  "plus.web.description": "使用 Inkspace 入口網站",
-  "plus.tags.title": "Inkspace Tags",
-  "plus.tags.description": "更好整理您的內容",
-  "plus.collaboration.title": "即時協同作業",
-  "plus.collaboration.description": "團隊合作",
+    "plus.title": "Improvements",
+  "plus.export.all.title": "One-click Export All Notes",
+  "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
+  "plus.usb.bt.title": "USB & BT Switch",
+  "plus.usb.bt.description": "Flexibly switch connection modes",
+  "plus.darktheme.title": "Perfect Dark Theme",
+  "plus.darktheme.description": "Brand new dark interface experience",
+  "plus.appid.title": "AppID Display",
+  "plus.appid.description": "View device AppID in Settings",
   "tutorial.viper.step.one.title": "附加剪輯和紙張",
   "tutorial.viper.step.one.desc": "附加剪輯到 Intuos Pro 並如所示放置紙張。",
   "tutorial.viper.step.two.title": "將墨水筆帶到紙張上",
@@ -184,6 +175,7 @@
   "settings.device.pair.device": "配對您的裝置",
   "settings.device.pair.device.bluetooth": "配對您的裝置 (Bluetooth)",
   "settings.device.not.connected": "沒有連接任何 Wacom 裝置",
+  "settings.device.appid": "AppID",
   "settings.about.title": "Wacom Inkspace",
   "settings.about.desc": "Copyright 2017 - {currentYear} Wacom Company, Limited.保留所有權利。",
   "settings.tab.device": "Wacom 裝置",
