--- a/src/l10n/langs/en.json
+++ b/src/l10n/langs/en.json
@@ -120,7 +120,7 @@
   "downloadProceed.description": "If you close Wacom Inkspace App while download proceed, your notes will be lost.",
   "export.limit.reached.title": "Limit reached",
   "export.limit.reached.description": "The maximum amount of 40 notes have been exceeded. Please, reduce the amount of the selected notes and try again.",
-  "plus.title": "Improvements",
+  "plus.title": "Move your ideas further",
   "plus.export.all.title": "One-click Export All Notes",
   "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
   "plus.usb.bt.title": "USB & BT Switch",
@@ -207,6 +207,7 @@
   "notification.do.not.unplug.device": "Please do not unplug USB while download is in progress",
   "notification.edit.layerDelete": "Layer deleted successfully",
   "notification.edit.layerPaste": "Layer pasted successfully",
+  "structure.pages": "pages",
   "menu.library": "Library",
   "menu.groups": "Groups",
   "menu.rename": "Rename",
