--- a/src/l10n/langs/zh-CN.json
+++ b/src/l10n/langs/zh-CN.json
@@ -120,7 +120,7 @@
   "downloadProceed.description": "如果进行下载时关闭Wacom Inkspace应用程序，您的笔记将会丢失。",
   "export.limit.reached.title": "已达到上限",
   "export.limit.reached.description": "已超过最大记事本数 40。请减少所选记事本数并重试。",
-  "plus.title": "改进项",
+  "plus.title": "使您的想法往前推进",
   "plus.export.all.title": "一键导出所有笔记",
   "plus.export.all.description": "支持 SVG, PSD, PNG, JPEG 格式",
   "plus.usb.bt.title": "USB & BT 切换",
@@ -207,6 +207,7 @@
   "notification.do.not.unplug.device": "下载进行中时，请勿拔除USB。",
   "notification.edit.layerDelete": "图层已成功删除 ",
   "notification.edit.layerPaste": "图层已成功粘贴",
+  "structure.pages": "页面",
   "menu.library": "数据库",
   "menu.groups": "组",
   "menu.rename": "重新命名",
