--- a/src/l10n/langs/es.json
+++ b/src/l10n/langs/es.json
@@ -122,7 +122,7 @@
   "downloadProceed.description": "If you close Wacom Inkspace App while download proceed, your notes will be lost.",
   "export.limit.reached.title": "Límite alcanzado",
   "export.limit.reached.description": "Se ha superado la cantidad máxima de 40 notas. Reduce la cantidad de notas seleccionadas y vuelve a intentarlo.",
-    "plus.title": "Improvements",
+    "plus.title": "Move your ideas further",
   "plus.export.all.title": "One-click Export All Notes",
   "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
   "plus.usb.bt.title": "USB & BT Switch",
