--- a/src/l10n/langs/fr.json
+++ b/src/l10n/langs/fr.json
@@ -122,7 +122,7 @@
   "downloadProceed.description": "Si vous fermez l'application Wacom Inkspace alors qu'un téléchargement est en cours, vos notes seront perdues.",
   "export.limit.reached.title": "Limite atteinte",
   "export.limit.reached.description": "Le nombre maximal de 40 notes a été dépassé. Veuillez réduire le nombre de notes sélectionnées et recommencer.",
-    "plus.title": "Improvements",
+    "plus.title": "Move your ideas further",
   "plus.export.all.title": "One-click Export All Notes",
   "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
   "plus.usb.bt.title": "USB & BT Switch",
