--- a/src/l10n/langs/ja.json
+++ b/src/l10n/langs/ja.json
@@ -122,7 +122,7 @@
   "downloadProceed.description": "ダウンロード中に Wacom Inkspace アプリを閉じるとメモは失われます。",
   "export.limit.reached.title": "制限に達しました",
   "export.limit.reached.description": "ノートの最大数 40 を越えています。選択済みのノートの数を減らしてやり直してください。",
-    "plus.title": "Improvements",
+    "plus.title": "Move your ideas further",
   "plus.export.all.title": "One-click Export All Notes",
   "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
   "plus.usb.bt.title": "USB & BT Switch",
