--- a/src/l10n/langs/ru.json
+++ b/src/l10n/langs/ru.json
@@ -122,7 +122,7 @@
   "downloadProceed.description": "Если Вы закроете приложение Wacom Inkspace во время скачивания, Ваши заметки будут утрачены.",
   "export.limit.reached.title": "Достигнуто ограничение",
   "export.limit.reached.description": "Превышено максимально допустимое количество заметок (40). Выберите меньшее количество заметок и повторите попытку.",
-    "plus.title": "Improvements",
+    "plus.title": "Move your ideas further",
   "plus.export.all.title": "One-click Export All Notes",
   "plus.export.all.description": "Supports SVG, PSD, PNG, JPEG formats",
   "plus.usb.bt.title": "USB & BT Switch",
